# orders-manager

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  apps.txt  cleaner.py  core_packages.txt  docker-compose.yml  dockerfile  entrypoint.sh  fill_database.py  initialize_logs.py  logger_config.py  manage.py  prod.dockerfile  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  urls.py  views.py
assets/countdownjs/: countdown.min.js
assets/htmx/: ws.js
assets/htmx_2_0_2/: ws.js
assets/js/: manual_updater.js
assets/server_date/: serverDate.js
chat/: views.py
config/gunicorn/: gunicorn.conf.py
config/nginx/: nginx.conf
config/supervisor/: supervisord.conf
configuration/: admin.py  models.py
core/: asgi.py  middleware.py  sql_tracker.py  urls.py
core/settings/: base.py  production.py
invitation/: admin.py  forms.py  models.py  urls.py  views.py
orderApp/: admin.py  apps.py  commonContext.py  consumers.py  context.py  enums.py  forms.py  groupContext.py  models.py  orderContext.py  orderGroupContext.py  orderRoomContext.py  orderSelectionContext.py  restaurantContext.py  routing.py  urls.py  utils.py  views.py
templates/base/: base.html  body.html  error.html  error_remover.html  index.html  navbar.html
templates/common/: body.html  showButton.html  time_lock.html
templates/group/: body.html
templates/invitation/: invite.html
templates/order/: body.html  detailsSection.html  error.html  finishOrder.html  formMenuItem.html  formOrderItem.html  formRestaurant.html  index.html  listSection.html  membersOrders.html  (+7 more)
(+123 files in other folders)
