[tool.black]
line-length = 150

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 150

[tool.uv.sources]
django-des = { git = "https://github.com/jamiecounsell/django-des", rev = "4d121c62ffd0cd7e6a7288a6f6aa14e82fb247e1" }

[project]
name = "ordersmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio==4.8.0",
    "apscheduler>=3.11.0",
    "asgiref==3.8.1",
    "attrs==24.3.0",
    "autobahn==24.4.2",
    "automat==24.8.1",
    "cffi==1.17.1",
    "channels==4.2.0",
    "click==8.1.8",
    "constantly==23.10.4",
    "cryptography==44.0.0",
    "daphne==4.1.2",
    "django==4.2.17",
    "django-des",
    "django-solo==2.3.0",
    "exceptiongroup==1.2.2",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "httptools==0.6.4",
    "hyperlink==21.0.0",
    "idna==3.10",
    "incremental==24.7.2",
    "packaging==24.2",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycparser==2.22",
    "pyopenssl==24.3.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "service-identity==24.2.0",
    "setuptools==75.8.0",
    "sniffio==1.3.1",
    "sqlparse==0.5.3",
    "tomli==2.2.1",
    "twisted==24.11.0",
    "txaio==23.1.1",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0",
    "uvicorn-worker==0.3.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.4",
    "websockets==14.1",
    "wheel==0.45.1",
    "zope-interface==7.2",
]
